cabal-version: >= 1.10

name:           th-test-utils
version:        1.2.2
synopsis:       Utility functions for testing Template Haskell code
description:    Utility functions for testing Template Haskell code, including
                functions for testing failures in the Q monad.
category:       Testing
homepage:       https://github.com/brandonchinn178/th-test-utils#readme
bug-reports:    https://github.com/brandonchinn178/th-test-utils/issues
author:         Brandon Chinn <brandonchinn178@gmail.com>
maintainer:     Brandon Chinn <brandonchinn178@gmail.com>
license:        BSD3
license-file:   LICENSE.md
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/th-test-utils

library
  exposed-modules:
      Language.Haskell.TH.TestUtils
      Language.Haskell.TH.TestUtils.QMode
      Language.Haskell.TH.TestUtils.QState
  other-modules:
      Paths_th_test_utils
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >=4.9 && <5
    , template-haskell
    , th-orphans
    , transformers
  default-language: Haskell2010
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
  if impl(ghc < 8.8)
    ghc-options: -Wnoncanonical-monadfail-instances

test-suite th-test-utils-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      TestLib
      TH
      Paths_th_test_utils
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base >=4.9 && <5
    , tasty
    , tasty-golden
    , tasty-hunit
    , template-haskell
    , text
    , th-orphans
    , th-test-utils
    , transformers
  default-language: Haskell2010
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
  if impl(ghc < 8.8)
    ghc-options: -Wnoncanonical-monadfail-instances
